--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="image-row">
             <div class="image-container">
                 <small>TriangleColored.cpp</small>
-                <img src="images/png/trianglecolored.png" alt="triangle colored">
+                <img src="images/png/trianglecolored.PNG" alt="triangle colored">
             </div>
             <div class="image-container">
                 <small>Cube3D.cpp</small>
